--- a/style.css
+++ b/style.css
@@ -3,13 +3,12 @@
     padding: 0;
 }
 
-@media only screen and (orientation: landscape){
-
 body {
     display: flex;
     justify-content: center;
     align-items: center;
     flex-wrap: wrap;
+    font-family: "Roboto";
 }
 
 article {
@@ -27,4 +26,28 @@ figure img {
     height: 350px;
 }
 
+figcaption {
+    font-size: 1.5em;
+    font-weight: bold;
+    margin-left: 30px;
+}
+
+a {
+    font-size: 1.2em;
+    font-weight: 600;
+    margin-left: 30px;
+    text-transform: uppercase;
+    text-decoration: none;
+}
+
+nav a{
+    color: purple;
+}
+
+.titre {
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 5%;
+    margin-top: 5%;
+    padding-right: 10%;
 }
