--- a/style.css
+++ b/style.css
@@ -15,15 +15,15 @@ article {
     display: flex;
     justify-content: space-between;
     flex-direction: column;
-    box-shadow: 2px 2px 2px 2px gray;
-    width: 550px;
-    margin: 10px;
+    box-shadow: 2px 2px 2px 2px black;
+    width: 450px;
+    margin: 20px;
     padding-bottom: 30px;
 }
 
 figure img {
     width: 100%;
-    height: 350px;
+    height: 250px;
 }
 
 figcaption {
@@ -50,4 +50,44 @@ nav a{
     margin-bottom: 5%;
     margin-top: 5%;
     padding-right: 10%;
+}
+
+
+@media screen and (max-width: 1960px) {
+    body {
+        background-color: grey;
+    }
+    
+    article {
+        background-color: white;
+        width: 25%;
+    }
+}
+
+@media screen and (max-width: 992px) {
+    body {
+        background-color: black;
+        
+    }
+    article {
+        width: 40%;
+    }
+    
+    figcaption {
+        color: black;
+    }
+}
+
+@media screen and (max-width: 600px) {
+    body {
+        background-color: white;
+    }
+    
+    article {
+        width: 100%;
+    }
+    
+    figcaption {
+        color: black;
+    }
 }
