--- a/bootstrap/style.css
+++ b/bootstrap/style.css
@@ -11,6 +11,10 @@ article {
     padding-top: 2%;
 }
 
+.row {
+    margin: auto;
+}
+
 .container-fluid {
     padding-right: 10%;
     padding-left: 10%;
@@ -21,8 +25,13 @@ article {
     font-size: 1.2em;
 }
 
-figure img {
-    height: 300px;
+figure {
+    height: 100%;
+    width: 100%;
+}
+
+img {
+    height: 70%;
     width: 100%;
 }
 
@@ -30,10 +39,13 @@ figcaption {
     margin-right: 7%;
     margin-left: 5%;
     margin-top: 5%;
-    padding-bottom: 4%;
 }
 
 figcaption h2 {
     font-size: 1.5em;
     font-weight: bold;
+}
+
+figcaption a {
+    font-size: 1.2em;
 }
